# marey

./: .gitignore  README.md  combined.py  common.py  download.py  get_urls.py  main.py  plot.py  prepare_plot.py  pyproject.toml  requirements.txt  save_page.py  scrap_html.py
examples/generated_csv/: chuo_main_delta.csv  chuo_processed.csv  chuo_sobu.csv  chuo_sobu_main_delta.csv  chuo_sobu_processed.csv  keihin_tohoku.csv  keihin_tohoku_main_delta.csv  keihin_tohoku_processed.csv  takasaki.csv  takasaki_branch_delta.csv  takasaki_main_delta.csv  ueno_tokyo_branch.csv  ueno_tokyo_main.csv  ueno_tokyo_processed.csv  yamanote.csv  yamanote_main_delta.csv  yamanote_processed.csv
examples/urls/: chuo.txt  chuo_sobu.txt  keihin_tohoku.txt  takasaki.txt  ueno_tokyo.txt  yamanote.txt
generated_csv/: chuo.csv  chuo_prep.csv
htmls/: chuo.html  chuo_sobu.html
htmls/chuo/: 00-05-武蔵小金井-快速  04-39-高尾-快速  04-59-高尾-快速  05-17-高尾-快速  05-30-高尾-快速  05-45-高尾-快速  05-58-高尾-快速  06-06-高尾-快速  06-12-高尾-中央特快  06-16-高尾-快速  06-23-高尾-快速  06-28-高尾-快速  06-34-高尾-中央特快  06-38-青梅-快速  06-48-高尾-快速  06-54-高尾-快速  06-59-豊田-快速  07-03-高尾-快速  07-08-高尾-快速  07-15-高尾-快速  07-19-武蔵小金井-快速  07-23-高尾-快速  07-27-高尾-快速  07-29-青梅-快速  07-32-武蔵小金井-快速  07-36-高尾-快速  07-40-高尾-快速  07-43-青梅-快速  07-47-武蔵小金井-快速  07-52-高尾-快速  07-55-高尾-快速  07-57-武蔵小金井-快速  07-59-豊田-快速  08-02-豊田-快速  08-04-高尾-快速  08-06-青梅-快速  08-09-高尾-快速  08-11-豊田-快速  08-14-立川-快速  08-16-武蔵小金井-快速  (+266 more)
htmls/chuo_sobu/: 00-02-中野-普通  00-09-三鷹-普通  00-16-三鷹-普通  00-25-中野-普通  00-34-中野-普通  05-02-三鷹-普通  05-23-三鷹-普通  05-38-三鷹-普通  05-49-三鷹-普通  05-59-三鷹-普通  06-10-三鷹-普通  06-19-三鷹-普通  06-26-中野-普通  06-35-三鷹-普通  06-42-中野-普通  (+223 more)
urls/: chuo.txt  chuo_sobu.txt
(+24 files in other folders)
