[project]
name = "marey"
version = "0.0.0"
description = ""
authors = [
    {name = "akazukin5151", email = "tsuiyikching@protonmail.com"},
]
dependencies = [
    "beautifulsoup4==4.11.1",
    "bokeh==2.4.2",
    "matplotlib==3.6.2",
    "numpy==1.24.4",
    "pandas==2.1.3",
    "seaborn==0.12.2",
]
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}

[project.urls]
homepage = "https://www.github.com/akazukin5151/marey"

